--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -147,8 +147,8 @@
 </p><p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Points_Workbench.html" title="Points Workbench">Points Workbench</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Part_Workbench.html" title="Part Workbench">Pracovn&iacute; plocha Part</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Points_Workbench.html" title="Points Workbench">Pracovn&iacute; plocha Points</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
@@ -185,15 +185,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118230635
+Cached time: 20260118230647
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.207 seconds
-Real time usage: 0.376 seconds
+CPU time usage: 0.191 seconds
+Real time usage: 0.246 seconds
 Preprocessor visited node count: 459/1000000
-Post&#8208;expand include size: 15435/2097152 bytes
-Template argument size: 5190/2097152 bytes
+Post&#8208;expand include size: 15477/2097152 bytes
+Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -201,18 +201,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.029      1 -total
- 31.14%    8.728      1 Template:PartDesign_Tools_navi/cs
- 23.88%    6.694      1 Template:Userdocnavi/cs
- 16.98%    4.758      2 Template:Navigation_menu_2
- 16.03%    4.494      2 Template:Docnav
-  9.43%    2.644      1 Template:TOCright
-  6.01%    1.686      1 Template:MenuCommand
-  4.69%    1.314      5 Template:VersionPlus
-  4.33%    1.215      1 Template:Version
+100.00%   18.167      1 -total
+ 27.95%    5.077      1 Template:Userdocnavi/cs
+ 26.19%    4.758      1 Template:PartDesign_Tools_navi/cs
+ 18.95%    3.443      2 Template:Navigation_menu_2
+ 12.51%    2.273      2 Template:Docnav
+  8.98%    1.631      5 Template:VersionPlus
+  7.25%    1.318      1 Template:Version
+  7.06%    1.283      1 Template:TOCright
+  5.30%    0.963      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260118230634 and revision id 1740830. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260118230647 and revision id 1740832. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
