--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -30,7 +30,9 @@
 </div>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>PartDesign workbench icon</figcaption></figure>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <div class="mw-translate-fuzzy">
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Revolve3_cropped.png&amp;filetimestamp=20111021160508&amp;.html" class="mw-file-description"><img src="../File/Revolve3_cropped.png" decoding="async" width="653" height="356" class="mw-file-element" data-file-width="653" data-file-height="356"></a></span>
 </p>
@@ -185,13 +187,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118230717
+Cached time: 20260118230727
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.227 seconds
-Real time usage: 0.357 seconds
-Preprocessor visited node count: 459/1000000
+CPU time usage: 0.188 seconds
+Real time usage: 0.288 seconds
+Preprocessor visited node count: 460/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -201,18 +203,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.072      1 -total
- 28.55%    6.302      1 Template:Userdocnavi/cs
- 21.96%    4.847      1 Template:PartDesign_Tools_navi/cs
- 18.12%    3.999      2 Template:Navigation_menu_2
- 16.99%    3.751      5 Template:VersionPlus
- 11.78%    2.601      2 Template:Docnav
-  6.25%    1.379      1 Template:TOCright
-  5.41%    1.194      1 Template:MenuCommand
-  5.18%    1.143      1 Template:Version
+100.00%   20.950      1 -total
+ 31.74%    6.649      1 Template:PartDesign_Tools_navi/cs
+ 23.33%    4.887      1 Template:Userdocnavi/cs
+ 18.55%    3.886      2 Template:Navigation_menu_2
+ 15.26%    3.197      1 Template:TOCright
+ 11.15%    2.336      2 Template:Docnav
+  5.11%    1.070      5 Template:VersionPlus
+  5.05%    1.058      1 Template:MenuCommand
+  4.65%    0.975      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260118230717 and revision id 1740832. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260118230726 and revision id 1740835. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
