--- a/wiki/de/Cables_CableLightPoint.html
+++ b/wiki/de/Cables_CableLightPoint.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables CableLightPoint/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Cables+CableLightPoint&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Cables_CableLightPoint.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Cables CableLightPoint (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Cables_CableLightPoint.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Source lumineuse (95% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../pl/Cables_CableLightPoint.html" class="mw-pt-progress mw-pt-progress--low" title="Kable: Punkt o&#347;wietlenia (5% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
@@ -81,13 +81,12 @@
 <h3><span class="mw-headline" id="Daten">Daten</span></h3>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Light Point</span>
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Diameter</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Gibt den Au&szlig;endurchmesser des Rings an. Der Standard-Durchmesser betr&auml;gt 20 mm.</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn auf <code>true</code> gesetzt, werden die verkn&uuml;pften Anschl&uuml;sse und Anschlusskreuze in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> als untergeordnete Elemente aufgef&uuml;hrt (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Diameter</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Gibt den Au&szlig;endurchmesser des Rings an. Der Standard-Durchmesser betr&auml;gt 20 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Gibt die H&ouml;he des Rings an. Die Standard-H&ouml;he betr&auml;gt 5 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Thickness</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Gibt die Dicke des Rings an. Die Standard-Dicke betr&auml;gt 2 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Preset</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Gibt ein vordefiniertes Set von Parametern f&uuml;r den Lichtauslass an. Die Standard-Voreinstellung ist: <code>Customized</code>. Diese Eigenschaft wird aktuell nicht verwendet.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Thickness</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Gibt die dicke der Wand des Rings an. Die Standard-Dicke betr&auml;gt 2 mm.</li></ul>
-</div>
 <p><span id="Typical_workflow"></span>
 </p>
 <h2><span class="mw-headline" id="Typischer_Arbeitsablauf">Typischer Arbeitsablauf</span></h2>
@@ -106,35 +105,35 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194825
+Cached time: 20260119000524
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.144 seconds
-Preprocessor visited node count: 411/1000000
-Post&#8208;expand include size: 9900/2097152 bytes
-Template argument size: 3294/2097152 bytes
+CPU time usage: 0.064 seconds
+Real time usage: 0.142 seconds
+Preprocessor visited node count: 451/1000000
+Post&#8208;expand include size: 10364/2097152 bytes
+Template argument size: 3372/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1035/5000000 bytes
+Unstrip post&#8208;expand size: 1039/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.248      1 -total
- 39.28%   16.594      5 Template:PropertyData/de
- 22.57%    9.537      5 Template:Variable
- 18.38%    7.765      1 Template:GuiCommand/de
-  9.52%    4.021      2 Template:Docnav/de
-  9.51%    4.019      6 Template:Incode
-  8.55%    3.610      1 Template:TitleProperty
-  7.76%    3.278      2 Template:Caption
-  6.09%    2.573      2 Template:KEY
-  5.75%    2.430      1 Template:Button
+100.00%   44.531      1 -total
+ 22.83%   10.167      1 Template:GuiCommand/de
+ 17.87%    7.957      6 Template:PropertyData/de
+ 15.72%    6.999      1 Template:TitleProperty
+ 13.60%    6.056      1 Template:Button
+ 10.73%    4.777      6 Template:Variable
+ 10.51%    4.682      2 Template:Docnav/de
+  9.74%    4.337      2 Template:KEY
+  5.64%    2.513      2 Template:MenuCommand
+  4.76%    2.119      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374240-0!canonical and timestamp 20260118194825 and revision id 1740818. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374240-0!canonical and timestamp 20260119000524 and revision id 1740867. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
