--- a/wiki/de/Cables_CableConnector.html
+++ b/wiki/de/Cables_CableConnector.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables CableConnector/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Cables+CableConnector&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Cables_CableConnector.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Cables CableConnector (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Cables_CableConnector.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Connecteur (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../pl/Cables_CableConnector.html" class="mw-pt-progress mw-pt-progress--low" title="Kable: Z&#322;&#261;cze kablowe (1% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
@@ -189,15 +189,14 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Basis</b><span style="font-size:80%;"> (<code>Link</code>)</span>: Eine externe Form eines beliebigen auf einer <a href="../de/Part_Workbench.html" title="Part Workbench/de">Form</a> basierenden Basisobjekts kann hier verwendet werden. Dies ersetzt die Standardmethode zur Formerstellung und es wird eine externe Form eingesetzt. Die Parameter <b>Number Of Terminals</b> und <b>Number Of Supp Lines</b> werden angezeigt und k&ouml;nnen bearbeitet werden, wenn die Eigenschaft Basis nicht leer ist.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Connector</span>
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Legt die H&ouml;he der Leitungsverbindung fest. Der Standardwert ist 5 mm.</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn auf <code>true</code> gesetzt, werden die verkn&uuml;pften Anschl&uuml;sse und Anschlusskreuze in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> als untergeordnete Elemente aufgef&uuml;hrt (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Legt die H&ouml;he der Leitungsverbindung fest. Der Standardwert ist 5 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Hole Size</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Legt die Querschnittsfl&auml;che des Lochs in mm<sup>2</sup> fest. Der Standardwert ist 2 mm<sup>2</sup>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Number of Holes</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: Legt die Anzahl der L&ouml;cher fest. Der Standardwert ist 3.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (standardm&auml;&szlig;ig ausgeblendet) Legt die Anzahl der untergeordneten <a href="../Cables_SuppLines.html" title="Cables SuppLines">SuppLines</a>-Objekte fest. Der Standardwert ist 0.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Number Of Terminals</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (standardm&auml;&szlig;ig ausgeblendet) Legt die Anzahl der untergeordneten <a href="../Cables_CableTerminal.html" title="Cables CableTerminal">CableTerminal</a>-Objekte fest. Der Standardwert ist 1.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Preset</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Legt den vorgefertigten Parametersatz f&uuml;r (die Gruppe) Cable Connector fest. Die Standardauswahl ist <code>TerminalStrip_2.5mm2_x3</code>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Thickness</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Legt die Wandst&auml;rke zwischen dem Loch und der Au&szlig;enfl&auml;che der Leitungsverbindung fest. Der Standardwert ist 1 mm.</li></ul>
-</div>
 <p><span id="Tutorials"></span>
 </p>
 <h2><span class="mw-headline" id="Anleitungen">Anleitungen</span></h2>
@@ -229,35 +228,35 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194806
+Cached time: 20260119000557
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.247 seconds
-Preprocessor visited node count: 921/1000000
-Post&#8208;expand include size: 17038/2097152 bytes
-Template argument size: 5118/2097152 bytes
+CPU time usage: 0.096 seconds
+Real time usage: 0.137 seconds
+Preprocessor visited node count: 961/1000000
+Post&#8208;expand include size: 17502/2097152 bytes
+Template argument size: 5196/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 7/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2288/5000000 bytes
+Unstrip post&#8208;expand size: 2292/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   71.836      1 -total
- 22.44%   16.121      1 Template:GuiCommand/de
- 15.16%   10.891      6 Template:KEY
- 15.08%   10.835      9 Template:PropertyData/de
- 10.70%    7.686      6 Template:Code
-  9.15%    6.570      2 Template:TitleProperty
-  8.04%    5.778      9 Template:Variable
-  7.56%    5.434     19 Template:Incode
-  7.35%    5.279      1 Template:Button
-  6.04%    4.341      3 Template:Caption
+100.00%   43.598      1 -total
+ 15.89%    6.930      1 Template:GuiCommand/de
+ 12.95%    5.645     10 Template:PropertyData/de
+ 12.93%    5.636      2 Template:TitleProperty
+ 10.40%    4.534      2 Template:Docnav/de
+  8.38%    3.655      3 Template:Caption
+  8.33%    3.631     10 Template:Variable
+  8.10%    3.529      6 Template:Code
+  6.84%    2.982      5 Template:Value
+  4.59%    2.002     20 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374315-0!canonical and timestamp 20260118194806 and revision id 1740813. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374315-0!canonical and timestamp 20260119000557 and revision id 1740869. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
